# computer-vision-mlops

./: README.md
object-counter/: docker-compose.yaml
object-counter/inference-service/: main.py  pyproject.toml
object-counter/ingest-service/: main.py  pyproject.toml
simple/: README.md  docker-compose.yaml
simple/camera-simulator/: Dockerfile
simple/inference-service/: main.py  pyproject.toml  ui.py
simple/ingest-service/: main.py  pyproject.toml
