[project]
name = "inference-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deep-sort-realtime>=1.3.2",
    "fastapi[standard]>=0.127.0",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "ultralytics>=8.3.241",
]
